--- a/charts/datacenter/manuela-tst/templates/line-dashboard/line-dashboard-route.yaml
+++ b/charts/datacenter/manuela-tst/templates/line-dashboard/line-dashboard-route.yaml
@@ -5,6 +5,7 @@ metadata:
     app: line-dashboard
   name: line-dashboard
 spec:
+  host: line-dashboard-manuela-tst-all.apps.{{ .Values.global.datacenter.clustername }}.{{ .Values.global.datacenter.domain }}
   port:
     targetPort: 8080-tcp
   to:
