--- a/charts/datacenter/manuela-tst/templates/messaging-kafka/kafka-cluster.yaml
+++ b/charts/datacenter/manuela-tst/templates/messaging-kafka/kafka-cluster.yaml
@@ -1,27 +1,18 @@
-apiVersion: kafka.strimzi.io/v1beta2
+apiVersion: kafka.strimzi.io/v1beta1
 kind: Kafka
 metadata:
   name: manuela-kafka-cluster
-  namespace: manuela-tst-all
   annotations:
-    argocd.argoproj.io/sync-options: SkipDryRunOnMissingResource=true
+    argocd.argoproj.io/sync-options: SkipDryRunOnMissingResource=true 
 spec:
   kafka:
+    version: 2.6.0
     replicas: 3
     listeners:
-      - name: plain
-        port: 9092
-        type: internal
-        tls: false
-      - name: tls
-        port: 9093
-        type: internal
-        tls: true
-      - name: external
-        port: 9094
-        type: route
-        tls: true
+      plain: {}
+      tls: {}
     config:
+      log.message.format.version: '2.6'
       offsets.topic.replication.factor: 3
       transaction.state.log.min.isr: 2
       transaction.state.log.replication.factor: 3
@@ -30,7 +21,7 @@ spec:
   zookeeper:
     replicas: 3
     storage:
-      type: ephemeral
+      type: ephemeral  
   entityOperator:
     topicOperator: {}
     userOperator: {}
