Revert "Update values-datacenter.yaml"
This reverts commit dbe21f5121749209baad1a5417ca1007c3e882e9.

--- a/values-datacenter.yaml
+++ b/values-datacenter.yaml
@@ -17,7 +17,7 @@ site:
   - kubeflow
 
   subscriptions:
-  - name: odf-operator
+  - name: ocs-operator
     namespace: openshift-storage
     channel: stable-4.10
 
