--- a/values-global.yaml
+++ b/values-global.yaml
@@ -18,10 +18,9 @@ global:
     account: rh_emea_sa_bot
 
   datacenter:
-    clustername: cluster-wdvml
-    domain: wdvml.sandbox968.opentlc.com
+    clustername: cluster-spmgq
+    domain: spmgq.sandbox2039.opentlc.com
 
   edge:
-    clustername: cluster-wdvml
-    domain: wdvml.sandbox968.opentlc.com
-
+    clustername: cluster-spmgq
+    domain: spmgq.sandbox2039.opentlc.com
