fix for pipelines

--- a/charts/datacenter/pipelines/templates/pipeline-from-manuela-ci-to-manuela-tst-all.yaml
+++ b/charts/datacenter/pipelines/templates/pipeline-from-manuela-ci-to-manuela-tst-all.yaml
@@ -11,3 +11,18 @@ roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: ClusterRole
   name: admin
+
+# Fix for 4.10 as default SA is 'default'
+kind: RoleBinding
+apiVersion: rbac.authorization.k8s.io/v1
+metadata:
+  name: admin
+  namespace: manuela-tst-all
+subjects:
+  - kind: ServiceAccount
+    name: default
+    namespace: manuela-ci
+roleRef:
+  apiGroup: rbac.authorization.k8s.io
+  kind: ClusterRole
+  name: admin
