updated Kubeflow Pipelines version

--- a/values-datacenter.yaml
+++ b/values-datacenter.yaml
@@ -14,7 +14,7 @@ site:
   - manuela-data-lake-central-kafka-cluster
   - staging
   - openshift-storage
-  - kubeflow
+  - odh-applications
 
   subscriptions:
   - name: odf-operator
