--- a/values-datacenter.yaml
+++ b/values-datacenter.yaml
@@ -83,9 +83,9 @@ site:
     project: datacenter
     path: charts/datacenter/pipelines
 
-  - name: tekton
-    project: datacenter
-    path: charts/datacenter/tekton
+  # - name: tekton
+  #   project: datacenter
+  #   path: charts/datacenter/tekton
 
   - name: central-kafka
     namespace: manuela-data-lake-central-kafka-cluster
