--- a/values-global.yaml
+++ b/values-global.yaml
@@ -18,9 +18,9 @@ global:
     account: rh_emea_sa_bot
 
   datacenter:
-    clustername: cluster-kskp6
-    domain: kskp6.sandbox824.opentlc.com
+    clustername: cluster-62fgq
+    domain: 62fgq.sandbox854.opentlc.com
 
   edge:
-    clustername: cluster-kskp6
-    domain: kskp6.sandbox824.opentlc.com
+    clustername: cluster-62fgq
+    domain: 62fgq.sandbox854.opentlc.com
