--- a/charts/datacenter/manuela-tst/templates/anomaly-detection/iot-anomaly-detection-seldon.yaml
+++ b/charts/datacenter/manuela-tst/templates/anomaly-detection/iot-anomaly-detection-seldon.yaml
@@ -12,15 +12,20 @@ spec:
     deployment_version: "1"
   name: anomaly-detection
   predictors:
-  - graph:
+  - annotations:
+        predictor_version: "0.1"
+    componentSpecs:
+    - spec:
+        containers:
+          - name: anomaly-detection
+            image: anomaly-detection:0.3.2-42
+            env:
+            - name: MODEL_FIILE
+              value: "model.joblib"
+    graph:
+      endpoint:
+        type: REST
       name: anomaly-detection
-      implementation: SKLEARN_SERVER
-      modelUri: s3://anomaly-detection
-      storageInitializerImage: seldonio/rclone-storage-initializer:1.12.0
-      envSecretRefName: seldon-rclone-secret
-      parameters:
-        - name: method
-          type: STRING
-          value: predict
+      type: MODEL
     name: predictor
     replicas: 1
