--- a/charts/factory/manuela-data-lake/templates/factory-mirror-maker/factory-to-central-mirror-maker2.yaml
+++ b/charts/factory/manuela-data-lake/templates/factory-mirror-maker/factory-to-central-mirror-maker2.yaml
@@ -1,10 +1,9 @@
-apiVersion: kafka.strimzi.io/v1alpha1
+apiVersion: kafka.strimzi.io/v1beta2
 kind: KafkaMirrorMaker2
 metadata:
   name: factory-to-central
   namespace: factory-mirror-maker
 spec:
-  version: 2.6.0
   replicas: 1
   connectCluster: manuela-central
   clusters:
@@ -19,7 +18,7 @@ spec:
       config:
         config.storage.replication.factor: 1
         offset.storage.replication.factor: 1
-        status.storage.replication.factor: 1  
+        status.storage.replication.factor: 1
   mirrors:
     - sourceCluster: manuela-factory
       targetCluster: manuela-central
