--- a/values-global.yaml
+++ b/values-global.yaml
@@ -18,9 +18,9 @@ global:
     account: rh_emea_sa_bot
 
   datacenter:
-    clustername: cluster-t599m
-    domain: t599m.sandbox446.opentlc.com
+    clustername: cluster-zrf4n
+    domain: zrf4n.sandbox456.opentlc.com
 
   edge:
-    clustername: cluster-t599m
-    domain: t599m.sandbox446.opentlc.com
+    clustername: cluster-zrf4n
+    domain: zrf4n.sandbox456.opentlc.com
